--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "expo": "~37.0.3",
+    "expo-mail-composer": "~8.1.0",
     "expo-notifications": "~0.1.1",
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
