--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "expo-notifications": "~0.1.1",
     "expo-permissions": "~8.1.0",
